# solar_analyses

./: .gitignore  .pre-commit-config.yaml  README.md  analyses.py  environment.yml  predicted_production.csv  pyproject.toml
Reports/: Energy_balance_Monthly_report_2023_01.csv  Energy_balance_Monthly_report_2023_05.csv
reports/: Energy_balance_Monthly_report_2022_12.csv  Energy_balance_Monthly_report_2023_01.csv  Energy_balance_Monthly_report_2023_02.csv  Energy_balance_Monthly_report_2023_03.csv  Energy_balance_Monthly_report_2023_04.csv  Energy_balance_Monthly_report_2023_06.csv  Energy_balance_Monthly_report_2023_07.csv  Energy_balance_Monthly_report_2023_08.csv  Energy_balance_Monthly_report_2023_09.csv  Energy_balance_Monthly_report_2023_10.csv  Energy_balance_Monthly_report_2023_11.csv  Energy_balance_Monthly_report_2023_12.csv  Energy_balance_Monthly_report_2024_01.csv  Energy_balance_Monthly_report_2024_02.csv  Energy_balance_Monthly_report_2024_03.csv  Energy_balance_Monthly_report_2024_04.csv  Energy_balance_Monthly_report_2024_05.csv  Energy_balance_Monthly_report_2024_06.csv  Energy_balance_Monthly_report_2024_07.csv  Energy_balance_Monthly_report_2024_08.csv  Energy_balance_Monthly_report_2024_09.csv  Energy_balance_Monthly_report_2024_10.csv  Energy_balance_Monthly_report_2024_11.csv  Energy_balance_Monthly_report_2024_12.csv  Energy_balance_Monthly_report_2025_01.csv  Energy_balance_Monthly_report_2025_02.csv  Energy_balance_Monthly_report_2025_03.csv  Energy_balance_Monthly_report_2025_04.csv  Energy_balance_Monthly_report_2025_05.csv  (+11 more)
(+6 files in other folders)
