[project]
name = "solar_analyses"
version = "0.1.0"
description = "An analysis of the energy production of an installed solar system."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cmdstanpy~=1.3",
    "matplotlib~=3.9",
    "numpy~=2.4",
    "pandas~=2.2",
    "scipy~=1.14",
    "tabulate~=0.9",
]

[project.urls]
Repository = "https://github.com/sharrison5/solar_analyses"

[tool.uv]
python-preference = "only-managed"

[dependency-groups]
dev = [
    "ipython~=8.29",
    "pre-commit~=4.0",
    "ruff==0.15.5",
]
